Fix nav links alignment and color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,23 +35,24 @@ font-size: 20px;
 background-color: transparent;
 overflow: hidden;
 padding: 10px;
+margin-left: 80px;
+display: inline-block;
 
 }
 
 .nav-bar a {
-color: black;
-font-size: 17px;
+color: #193f51;
+font-size: 20px;
 text-decoration: none;
 padding: 25px 20px;
-text-transform: uppercase;
 font-weight: bold;
 text-align: center;
 
 }
 
 .nav-bar li {
-display: inline-block;
 margin-right: 30px;
+display: inline-block;
 
 
 }
@@ -67,12 +68,13 @@ justify-content: center;
 }
 
 .hero-text {
-font-size: 130%;
+font-size: 110%;
 letter-spacing: 2px;
 text-align: center;
 position: absolute;
 top: 58%;
-right: 50%;
+color:#193f51;
+right: 40%;
 
 }
 
